--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     implementation 'com.vaadin:vaadin-core'
     implementation group: 'org.json', name: 'json', version: '20210307'
     implementation 'com.konghq:unirest-java:3.14.5'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework:spring-webflux:6.0.13'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
